# sfmlRPG

./: CMakeLists.txt
.github/workflows/: ci.yml
src/: main.cpp
src/client/: main.cpp
src/clientLib/: Anim_Base.cpp  Anim_Base.h  Anim_Directional.cpp  Anim_Directional.h  AudioManager.h  BaseState.h  C_Drawable.h  C_SoundEmitter.h  C_SoundListener.h  C_SpriteSheet.h  C_UI_Element.h  Client.cpp  Client.h  ClientEntityManager.cpp  ClientEntityManager.h  EventManager.cpp  EventManager.h  FontManager.h  GUI_Event.h  Map.cpp  Map.h  NetSettings.h  S_Movement.h  S_Network.cpp  S_Network.h  S_Renderer.cpp  S_Renderer.h  SharedContext.h  SoundManager.cpp  SoundManager.h  SoundProps.h  SpriteSheet.cpp  SpriteSheet.h  StateManager.cpp  StateManager.h  State_Game.cpp  State_Game.h  State_Intro.cpp  State_Intro.h  TextureManager.h  (+4 more)
src/server/: A.h  main.cpp
src/serverLib/: A.cpp  C_Attacker.h  Map.cpp  Map.h  S_Movement.cpp  Server.cpp  Server.h  ServerEntityManager.cpp  ServerEntityManager.h
src/shared/: MyClass.h
src/sharedDir/: Bitmask.h  C_Base.h  C_Client.h  C_Collidable.h  C_Controller.h  C_Health.h  C_Movable.h  C_Name.h  C_Position.h  C_State.h  C_TimedComponentBase.h  Communicator.h  Directions.h  ECS_Types.h  EntityEvents.h  EntityManager.cpp  EntityManager.h  EntityMessages.h  EntitySnapshot.cpp  EntitySnapshot.h  EventQueue.h  Message.h  MessageHandler.h  MyClass.cpp  NetworkDefinitions.h  Observer.h  PacketTypes.cpp  PacketTypes.h  ResourceManager.h  S_Base.cpp  S_Base.h  S_Control.cpp  S_Control.h  S_State.cpp  S_State.h  SystemManager.cpp  SystemManager.h  Utilities.h
